--- a/products.html
+++ b/products.html
@@ -38,6 +38,7 @@
         <h2><span style="color: #FF3385;">Branded Merchandise</span></h2>
         <p>Aprons, oven mitts, and other cooking-related merchandise branded with the company's logo or slogan.</p>
         <p>Show your support with our branded merchandise!</p>
+        <img src = "Branded_Merhcnadise.jpg" width = 480 height = 220>  
       </li>
     </ul>
     <br>
