--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
             provided below and you should receive a reply in 3-5 business days.</p>
         <br>
         <img src = "MGMT382_picture.jpg" width = 480 height = 480>  
-        <ol style= "text-align: left; size = 50;">
+        <ol style= "text-align: left; size : 50;">
             <li style="color: white;"> Contact Us </li>
             <li style="color: white;"> Get More Information </li>
         </ol>
