--- a/testimonials.html
+++ b/testimonials.html
@@ -17,7 +17,7 @@
     <div style="max-width: 960px; margin: 0 auto;">
         <div style="max-width: 960px; padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
             <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333;">
-                <img src="customer1.jpg" alt="Customer 1" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
+                <img src="Customer1.jpg" alt="Customer 1" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
                 <div style="margin-left: 120px;">
                     <div style="font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 1:</div>
                     <div style="font-style: italic;">
@@ -32,7 +32,7 @@
         <div style="display: inline-block; margin: 0 auto;">
             <div style="max-width: 960px; padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
                 <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333;">
-                    <img src="customer2.jpg" alt="Customer 2" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
+                    <img src="Customer 2.jpg" alt="Customer 2" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
                     <div style="margin-left: 120px;">
                         <div style="font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 2:</div>
                         <div style="font-style: italic;">
@@ -49,7 +49,7 @@
         <div style="display: inline-block; margin: 0 auto;">
             <div style="max-width: 960px; padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
                 <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333;">
-                    <img src="customer3.jpg" alt="Customer 3" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
+                    <img src="Customer 3.jpg" alt="Customer 3" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
                     <div style="margin-left: 120px;">
                         <div style="font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 3:</div>
                         <div style="font-style: italic;">
@@ -63,6 +63,13 @@
         </div>
     </div>
 </div>
+
+<p>Last updated: <span id="lastUpdated"></span></p>
+ 
+
+<script>
+    document.getElementById("lastUpdated").innerHTML = document.lastModified;
+  </script>
 
 </body>
 </html>
