--- a/services.html
+++ b/services.html
@@ -40,5 +40,8 @@
             <li style="color: white;"> Get More Information </li>
         </ol>
         </div>
+        <script>
+        document.getElementById("lastUpdated").innerHTML = document.lastModified;
+        </script>
     </body>
 </html>
