--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 <a href="https://ethanhaeberle.github.io/MGMT382group10/main_content" target = "main">HOME</a>
 <br>
 <br>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team" target = "main">Company History</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team" target = "main">Company History & Team</a>
 <br>
 <br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/products" target = "main">Products</a>
