--- a/companyhistory&team.html
+++ b/companyhistory&team.html
@@ -29,6 +29,21 @@
             <h2>Today and Beyond</h2>
             <p>Today, Christie and Chris's Cooking Cabin is more than just a company; it's a community where individuals come to learn, share, and celebrate the art of cooking. As we look to the future, we remain committed to innovating and expanding our offerings, always staying true to our mission of making cooking fun and accessible for all.</p>
         </section>
+
+        <section>
+            <h2>Management Team</h2>
+            <table>
+                <tr>
+                    <td><img src="images/christie.jpg" alt="Christie" style="width:100px;height:auto;"></td>
+                    <td><strong>Christie</strong> - Co-Founder and Culinary Director<br>Christie's passion for cooking and teaching has been the cornerstone of our Cabin's philosophy. With a background in culinary arts and nutrition, she designs our cooking kits and leads many of our classes.</td>
+                </tr>
+                <tr>
+                    <td><img src="images/chris.jpg" alt="Chris" style="width:100px;height:auto;"></td>
+                    <td><strong>Chris</strong> - Co-Founder and Operations Manager<br>Chris handles the operational side of the Cabin, ensuring everything runs smoothly. His expertise in business management and love for technology have propelled our online and in-store experiences to new heights.</td>
+                </tr>
+                <!-- Add more team members here with the same structure -->
+            </table>
+        </section>
     </main>
     
     <footer>
