--- a/services.html
+++ b/services.html
@@ -34,14 +34,11 @@
         <p style="font-family: Georgia, serif; color: #1D4E89;"> You can find information about pricing below. For more information about pricing and availability please contact the email address
             provided below and you should receive a reply in 3-5 business days.</p>
         <br>
-        <img src = "MGMT382_servicepicture.jpg">  
+        <img src = "MGMT382_servicepicture.jpg" width = 480 height = 360>  
         <ol style= "text-align: left; size : 50;">
             <li style="color: white;"> Contact Us </li>
             <li style="color: white;"> Get More Information </li>
         </ol>
         </div>
-        <script>
-        document.getElementById("lastUpdated").innerHTML = document.lastModified;
-        </script>
     </body>
 </html>
