--- a/services.html
+++ b/services.html
@@ -27,7 +27,9 @@
             <h3 style="color: blue;"> Culinary Tours </h3>
             <p style="font-family: Arial, sans-serif; color: #1D4E89;"> With our arranged guides which have great expertise in their respective areas, you
             have a chance to visit local markets, farmers markets, food shops, wineries and get exposed to some of the very important 
-            culinary landmarks in regions that you want, you can join these tours alone, or with friends/family!</p>
+            culinary landmarks in regions that you want, you can join these tours alone, or with friends/family!
+            <br>
+            You can find also more about our Culinary Tours <a href = "Culinary Tours.pdf" download> HERE </a></p>
         </li>
         </ul>
         <br>
