--- a/testimonials.html
+++ b/testimonials.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Testimonials</title>
+    <body style="background-color: #ADD8E6;"></body>
 </head>
 <body>
 
 <header>
     <h1 style="color: #fff; background-color: #333; padding: 10px 0; text-align: center;">Customer Testimonials</h1>
-</header>
 
-<h2 style="color: #FF3385; text-align: center;">Please Read Our Raving Reviews!</h2>
+<div style="font-size: 24px; color: #FF3385; text-align: center;">Please Read Our Raving Reviews!</div>
+<div style="font-size: 12px; text-align: center;">If you would like to leave a review please be sure to include:</div>
+<div style="font-size: 12px; text-align: center;">
+    <ul>
+      <li>Your name and email address</li>
+      <li>The products which you have purchased and used</li>
+      <li>A detailed description of your experience </li>
+    </ul>
+    <p>Click <a href="feedback_form.pdf" download>here</a> to download the feedback form.</p>
+  </div>
+  
 
 
 
@@ -21,7 +31,7 @@
             <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333;">
                 <img src="Customer 1.jpg" alt="Customer 1" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
                 <div style="margin-left: 120px;">
-                    <div style="font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 1:</div>
+                    <div style="font-size : 18px ; font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 1:</div>
                     <div style="font-style: italic;">
                         <p>While C&C's has always been a great place to get supplies, their <b>branded merchandise</b>
                         really took it to the next level! Now everyone sees me in the gear and knows I'm a serious Chef.</p>
@@ -36,7 +46,7 @@
                 <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333;">
                     <img src="Customer 2.jpg" alt="Customer 2" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
                     <div style="margin-left: 120px;">
-                        <div style="font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 2:</div>
+                        <div style="font-size : 18px ;font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 2:</div>
                         <div style="font-style: italic;">
                             <p>C&C's cooking cabin always knows exactly what I need for my next recipe! 
                             From selling the proper tools to <b>pre-packaged kits</b> C&C's makes sure I never fail to 
@@ -53,7 +63,7 @@
                 <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333;">
                     <img src="Customer 3.jpg" alt="Customer 3" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
                     <div style="margin-left: 120px;">
-                        <div style="font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 3:</div>
+                        <div style="font-size : 18px ;font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 3:</div>
                         <div style="font-style: italic;">
                             <p>Everytime I'm in a pinch I know I can count on C&C's to deliver the hard to find ingredients that I need! Their <B>specialty ingredients</B> and 
                                 <b>recipe cards</b> are a lifesaver. </p>
