--- a/testimonials.html
+++ b/testimonials.html
@@ -12,15 +12,7 @@
     <h1 style="color: #fff; background-color: #333; padding: 10px 0; text-align: center;">Customer Testimonials</h1>
 
 <div style="font-size: 24px; color: #FF3385; text-align: center;">Please Read Our Raving Reviews!</div>
-<div style="font-size: 12px; text-align: center;">If you would like to leave a review please be sure to include:</div>
-<div style="font-size: 12px; text-align: center;">
-    <ul>
-      <li>Your name and email address</li>
-      <li>The products which you have purchased and used</li>
-      <li>A detailed description of your experience </li>
-    </ul>
-    <p>Click <a href="feedback_form.pdf" download>here</a> to download the feedback form.</p>
-  </div>
+
   
 
 
@@ -75,6 +67,26 @@
         </div>
     </div>
 </div>
+<div style="font-size: 16px; text-align: center;"><b>If you would like to leave a review please be sure to include:</b> </div>
+<div style="font-size: 12px; text-align: center;">
+    <ul>
+      <li>Your name and email address</li>
+      <li>The products which you have purchased and used</li>
+      <li>A detailed description of your experience </li>
+    </ul>
+    <p>Click <a href="feedback_form.pdf" download>here</a> to download the feedback form.</p>
+    <div style="font-size: 16px; text-align: center;"><b> Your feedback is greatly appreciated as it helps us improve:</b> </div>
+    <div style="font-size: 12px; text-align: center;">
+    <ol>
+        <li>Our products and services</li>
+        <li>How we interact with our customers</li>
+        <li>How we approach branding and ensure our customers are thoroughly satisfied</li>
+
+
+    </ol>
+  </div>
+
+  <p> To contact the designer of this webpage or submit feedback please <a href="mailto:ehaeberl@purdue.edu"><u>contact me</u></a>.</p>
 
 <p>Last updated: <span id="lastUpdated"></span></p>
  
