--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
         <br>
         <img src = "MGMT382_servicepicture.jpg" width = 480 height = 360>  
         <ol style= "text-align: left; size : 50;">
-            <p><li style="color: darkblue;"><a href = "mailto:bkaya@purdue.edu">Contact Us</a></li></p>
+            <p><li style="color: darkblue;"><a href = "mailto:bkaya@purdue.edu">Contact Me</a></li></p>
             <p><li style="color: darkblue;"> Get More Information </li></p>
         </ol>
         <br>
