--- a/services.html
+++ b/services.html
@@ -44,9 +44,7 @@
         </ol>
         <br>
         <p>Last updated: <span id="lastUpdated"></span></p>
-        <script>
-        document.getElementById("lastUpdated").innerHTML = document.lastModified;
-        </script>
         </div>
+        <script> document.getElementById("lastUpdated").innerHTML = document.lastModified; </script>
     </body>
 </html>
