--- a/services.html
+++ b/services.html
@@ -16,7 +16,8 @@
         <li>
             <h3 style="color: blue;"> Cooking Classes </h3>
             <p style="font-family: Arial, sans-serif; color: #1D4E89;"> Virtual cooking classes led by professional cooking instructors covering the 
-            fundamentals of cooking techniques.</p></li>
+            fundamentals of cooking techniques. If you would like to further read about the benefits of virtual cooking classes, you can <a href = 
+            "https://www.pennfoster.edu/blog/a-look-at-the-benefits-of-online-cooking-classes" target = "_blank"> HERE </a></p></li>
         <br>
         <li>
             <h3 style="color: blue;"> Cooking Workshops </h3>
