--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
         <img src = "MGMT382_servicepicture.jpg" width = 480 height = 360>  
         <ol style= "text-align: left; size : 50;">
             <p><li style="color: darkblue; font-size: 20px;"><a href = "mailto:bkaya@purdue.edu">Contact Me</a></li></p>
-            <p><li style="color: darkblue;"> Get More Information </li></p>
+            <p><li style="color: darkblue; font-size: 20px;"> Get More Information </li></p>
         </ol>
         <br>
         </div>
