--- a/companyhistory&team.html
+++ b/companyhistory&team.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company History | Christie and Chris's Cooking Cabin</title>
 </head>
-<body>
+<body style="background-color: #ADD8E6;">
     <header>
         <h1>Our History</h1>
     </header>
