--- a/testimonials.html
+++ b/testimonials.html
@@ -11,7 +11,7 @@
 <header>
     <h1 style="color: #fff; background-color: #333; padding: 10px 0; text-align: center;">Customer Testimonials</h1>
 
-<div style="font-size: 24px; color: #FF3385; text-align: center;">Please Read Our Raving Reviews!</div>
+<div style="font-family:Arial, Helvetica, sans-serif; font-size: 24px; color: #FF3385; text-align: center;">Please Read Our Raving Reviews!</div>
 
   
 
@@ -58,7 +58,8 @@
                         <div style="font-size : 18px ;font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 3:</div>
                         <div style="font-style: italic;">
                             <p>Everytime I'm in a pinch I know I can count on C&C's to deliver the hard to find ingredients that I need! Their <B>specialty ingredients</B> and 
-                                <b>recipe cards</b> are a lifesaver. </p>
+                                <b>recipe cards</b> are a lifesaver. Additionally, if I'm feeling really spicy I can count on my friends over at Dan-o's to provide that extra kick! <a href="https://danosseasoning.com/">Check them out here!</a>
+                            </p>
                             <span style="font-family: 'Courier New', Courier, monospace;">- Sarah Johnson</span>
                         </div>
                     </div>
@@ -67,16 +68,16 @@
         </div>
     </div>
 </div>
-<div style="font-size: 16px; text-align: center;"><b>If you would like to leave a review please be sure to include:</b> </div>
-<div style="font-size: 12px; text-align: center;">
+<div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 16px; text-align: center;"><b>If you would like to leave a review please be sure to include:</b> </div>
+<div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 12px; text-align: center;">
     <ul>
       <li>Your name and email address</li>
       <li>The products which you have purchased and used</li>
       <li>A detailed description of your experience </li>
     </ul>
     <p>Click <a href="feedback_form.pdf" download>here</a> to download the feedback form.</p>
-    <div style="font-size: 16px; text-align: center;"><b> Your feedback is greatly appreciated as it helps us improve:</b> </div>
-    <div style="font-size: 12px; text-align: center;">
+<div style="font-size: 16px; text-align: center;"><b> Your feedback is greatly appreciated as it helps us improve:</b> </div>
+<div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size:12px; text-align: center;">
     <ol>
         <li>Our products and services</li>
         <li>How we interact with our customers</li>
