--- a/companyhistory&team.html
+++ b/companyhistory&team.html
@@ -34,11 +34,11 @@
             <h2>Management Team</h2>
             <table>
                 <tr>
-                    <td><img src="images/christie.jpg" alt="Christie" style="width:100px;height:auto;"></td>
+                    <td><img src="christie.jpg" alt="Christie" style="width:100px;height:auto;"></td>
                     <td><strong>Christie</strong> - Co-Founder and Culinary Director<br>Christie's passion for cooking and teaching has been the cornerstone of our Cabin's philosophy. With a background in culinary arts and nutrition, she designs our cooking kits and leads many of our classes.</td>
                 </tr>
                 <tr>
-                    <td><img src="images/chris.jpg" alt="Chris" style="width:100px;height:auto;"></td>
+                    <td><img src="Chris.jpg" alt="Chris" style="width:100px;height:auto;"></td>
                     <td><strong>Chris</strong> - Co-Founder and Operations Manager<br>Chris handles the operational side of the Cabin, ensuring everything runs smoothly. His expertise in business management and love for technology have propelled our online and in-store experiences to new heights.</td>
                 </tr>
                 <!-- Add more team members here with the same structure -->
