--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
             <h3 style="color: blue;"> Cooking Classes </h3>
             <p style="font-family: Arial, sans-serif; color: #1D4E89;"> Virtual cooking classes led by professional cooking instructors covering the 
             fundamentals of cooking techniques. If you would like to further read about the benefits of virtual cooking classes, you can <a href = 
-            "https://www.pennfoster.edu/blog/a-look-at-the-benefits-of-online-cooking-classes" target = "_blank"> HERE </a></p></li>
+            "https://www.pennfoster.edu/blog/a-look-at-the-benefits-of-online-cooking-classes" target = "_blank"> here </a></p></li>
         <br>
         <li>
             <h3 style="color: blue;"> Cooking Workshops </h3>
@@ -31,7 +31,7 @@
             culinary landmarks in regions that you want, you can join these tours alone, or with friends/family!
             <br>
             <br>
-            You can find also more about our Culinary Tours <a href = "Culinary Tours.pdf" download> HERE </a></p>
+            You can also find more about our Culinary Tours by downloading our brochure <a href = "Culinary Tours.pdf" download> here </a></p>
         </li>
         </ul>
         <br>
