--- a/companyhistory&team.html
+++ b/companyhistory&team.html
@@ -35,13 +35,16 @@
             <table>
                 <tr>
                     <td><img src="christie.jpg" alt="Christie" style="width:100px;height:auto;"></td>
-                    <td><strong>Christie</strong> - Co-Founder and Culinary Director<br>Christie's passion for cooking and teaching has been the cornerstone of our Cabin's philosophy. With a background in culinary arts and nutrition, she designs our cooking kits and leads many of our classes.</td>
+                    <td><strong>Christie</strong> - Co-Founder and Culinary Director<br><em>Christie's passion for cooking and teaching has been the cornerstone of our Cabin's philosophy. With a background in culinary arts and nutrition, she designs our cooking kits and leads many of our classes.</em></td>
                 </tr>
                 <tr>
                     <td><img src="Chris.jpg" alt="Chris" style="width:100px;height:auto;"></td>
-                    <td><strong>Chris</strong> - Co-Founder and Operations Manager<br>Chris handles the operational side of the Cabin, ensuring everything runs smoothly. His expertise in business management and love for technology have propelled our online and in-store experiences to new heights.</td>
+                    <td><strong>Chris</strong> - Co-Founder and Operations Manager<br><em>Chris handles the operational side of the Cabin, ensuring everything runs smoothly. His expertise in business management and love for technology have propelled our online and in-store experiences to new heights.</em></td>
                 </tr>
-                <!-- Add more team members here with the same structure -->
+                <tr>
+                    <td><img src="Jeffery.jpg" alt="Jeffery" style="width:100px;height:auto;"></td>
+                    <td><strong>Jeffery</strong> - Assistant Chef<br><em>With a zest for innovation and a knack for flavors, Jeffery supports the kitchen with his culinary skills and assists in developing new recipes for our DIY cooking kits. His dedication and creativity make him an invaluable member of our team, always ensuring that every dish not only tastes good but also inspires our community to explore their cooking potential.</em></td>
+                </tr>
             </table>
         </section>
     </main>
