--- a/companyhistory&team.html
+++ b/companyhistory&team.html
@@ -27,7 +27,7 @@
         
         <section>
             <h2>Today and Beyond</h2>
-            <p>Today, Christie and Chris's Cooking Cabin is more than just a company; it's a community where individuals come to learn, share, and celebrate the art of cooking. As we look to the future, we remain committed to innovating and expanding our offerings, always staying true to our mission of making cooking fun and accessible for all. <em>Click here for a video of one of our cooking classes!</em> </p>
+            <p>Today, Christie and Chris's Cooking Cabin is more than just a company; it's a community where individuals come to learn, share, and celebrate the art of cooking. As we look to the future, we remain committed to innovating and expanding our offerings, always staying true to our mission of making cooking fun and accessible for all. <a href=https://www.youtube.com/watch?v=IqrwRmgAz84&ab_channel=Biteable">Click here for a video of one of our cooking classes!</a></p>
         </section>
 
         <section>
