--- a/testimonials.html
+++ b/testimonials.html
@@ -58,7 +58,7 @@
                         <div style="font-size : 18px ;font-weight: bold; color: #5733ff; text-decoration: underline;">Customer 3:</div>
                         <div style="font-style: italic;">
                             <p>Everytime I'm in a pinch I know I can count on C&C's to deliver the hard to find ingredients that I need! Their <B>specialty ingredients</B> and 
-                                <b>recipe cards</b> are a lifesaver. Additionally, if I'm feeling really spicy I can count on my friends over at Dan-o's to provide that extra kick! <a href="https://danosseasoning.com/">Check them out here!</a>
+                                <b>recipe cards</b> are a lifesaver. Additionally, if I'm feeling really spicy I can count on my friends over at Dan-o's to provide that extra kick! <a href="https://danosseasoning.com/" target="_blank">Check them out here!</a>
                             </p>
                             <span style="font-family: 'Courier New', Courier, monospace;">- Sarah Johnson</span>
                         </div>
