--- a/companyhistory&team.html
+++ b/companyhistory&team.html
@@ -47,6 +47,13 @@
                 </tr>
             </table>
         </section>
+
+        <section style="text-align: center;">
+            <h2 style="color: #4A90E2; font-family: 'Arial', sans-serif;">Contact Me</h2>
+            <p>If you have any questions or would like to get in touch, please don't hesitate to contact us:</p>
+            <p>Email: <a href="mailto:info@cookingcabin.com">info@cookingcabin.com</a></p>
+            <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+        </section>
     </main>
     
     <footer>
