--- a/companyhistory&team.html
+++ b/companyhistory&team.html
@@ -22,8 +22,51 @@
         
         <section>
             <h2>Expanding Our Services</h2>
-            <p>Recognizing the joy and bonding cooking brings, we ventured beyond products to launch cooking classes in 2012. This soon evolved into a full suite of services, including team building events, private cooking parties, cooking workshops, culinary tours, and masterclasses, each designed to enrich the culinary skills and experiences of our participants.</p>
+            <p>Recognizing the joy and bonding cooking brings, we ventured beyond products to launch a diverse range of services designed to enrich the culinary skills and experiences of our participants:</p>
+            <ol>
+                <li>
+                    <strong>Cooking Classes</strong> - Introduced in 2012, featuring:
+                    <ul>
+                        <li>In-person and virtual formats</li>
+                        <li>Variety of cuisines and techniques</li>
+                        <li>Classes led by experienced chefs</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Team Building Events</strong> - Customized for corporate teams, including:
+                    <ul>
+                        <li>Meal preparation activities</li>
+                        <li>Focus on teamwork and communication</li>
+                        <li>Fun and engaging environment</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Private Cooking Parties</strong> - For special occasions like birthdays and anniversaries, offering:
+                    <ul>
+                        <li>Customized cooking lessons</li>
+                        <li>A unique way to celebrate together</li>
+                        <li>Interactive and memorable experiences</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Cooking Workshops</strong> - Hands-on sessions on specific culinary skills, such as:
+                    <ul>
+                        <li>Knife skills</li>
+                        <li>Pasta making</li>
+                        <li>Cake decorating</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Culinary Tours</strong> - Guided tours with a culinary twist, including:
+                    <ul>
+                        <li>Local market visits</li>
+                        <li>Food shop explorations</li>
+                        <li>Cooking demonstrations and tastings</li>
+                    </ul>
+                </li>
+            </ol>
         </section>
+
         
         <section>
             <h2>Today and Beyond</h2>
