--- a/companyhistory&team.html
+++ b/companyhistory&team.html
@@ -22,7 +22,7 @@
         
         <section>
             <h2>Expanding Our Services</h2>
-            <p>Recognizing the joy and bonding cooking brings, we ventured beyond products to launch a diverse range of services designed to enrich the culinary skills and experiences of our participants:</p>
+            <p style="color: black;">Recognizing the joy and bonding cooking brings, we ventured beyond products to launch a diverse range of services designed to enrich the culinary skills and experiences of our participants:</p>
             <ol>
                 <li>
                     <strong>Cooking Classes</strong> - Introduced in 2012, featuring:
